--- a/index.html
+++ b/index.html
@@ -26,17 +26,8 @@
 
 <body>
 	<main>
-		<header class="header">
-			<img class="photo" src="/assets/img/photo.jpeg" alt="Picture André Spindola">
-
-			<h1 class="title">Hi,<br>I am André Spindola</h1>
-
-			<div class="information">
-				<a href="https://www.linkedin.com/in/andr%C3%A9-spindola-472659189/" target="_blank" class="job">Full Stack Developer</a>
-				<p class="location">Santa Catarina - BR</p>
-				<a href="tel:(48) 9 9158-0376" class="phone">(48) 9 9158-0376</a>
-				<a href="mailto:decospdl@gmail.com" class="email">decospdl@gmail.com</a>
-			</div>
+		<header id="header" class="header">
+			<!-- Append header template -->
 		</header>
 
 		<section>
@@ -44,67 +35,24 @@
 				<button class="acordeon" type="button">
 					<h2 class="title">Languages</h2>
 					<div class="content">
-						<ul class="languages">
-							<li class="language">
-								<img src="/assets/icons/flag-brazil.svg" alt="Flag Brazil">
-								<span>Portuguese</span>
-							</li>
-							<li class="language">
-								<span class="level">A1</span>
-								<span>English</span>
-							</li>
+						<ul id="languages" class="languages">
+							<!-- Append languages template -->
 						</ul>
 					</div>
 				</button>
 				<button class="acordeon" type="button">
 					<h2 class="title">Repositories</h2>
 					<div class="content">
-						<ul class="repositories">
-							<li class="repository">
-								<div class="detail">
-									<span>Codemon - Education Game</span>
-									<a href="https://github.com/uniaodk/codemon" target="_blank">https://github.com/uniaodk/codemon</a>
-								</div>
-							</li>
-							<li class="repository">
-								<div class="detail">
-									<span>Sudoku | Game and Solver - JavaFX</span>
-									<a href="https://github.com/uniaodk/sudoku-javafx" target="_blank">https://github.com/uniaodk/sudoku-javafx</a>
-								</div>
-							</li>
-							<li class="repository">
-								<div class="detail">
-									<span>Pokedex - DIO Challenge</span>
-									<a href="https://github.com/uniaodk/pokedex-dio-challenge" target="_blank">https://github.com/uniaodk/pokedex-dio-challenge</a>
-								</div>
-							</li>
+						<ul id="repositories" class="repositories">
+							<!-- Append repositories template -->
 						</ul>
 					</div>
 				</button>
 				<button class="acordeon" type="button">
 					<h2 class="title">Experiences</h2>
 					<div class="content">
-						<ul class="experiences">
-							<li class="experience">
-								<h3>Full-stack Developer | G4F</h3>
-								<p class="period">mar 2023 - current</p>
-								<p class="info">I keep providing maintenance for communication services and other TCE projects. I am currently working on developing a system for managing personal processes such as retirements.</p>
-							</li>
-							<li class="experience">
-								<h3>Full-stack Developer | GENNERA - AcademicOne </h3>
-								<p class="period">sep 2021 - current</p>
-								<p class="info">I work on the implementation of the financial system, in which I was responsible for the renegotiation system. I provide maintenance and bug fixing services in other modules, such as registrations, protocols, reports, importers, etc.</p>
-							</li>
-							<li class="experience">
-								<h3>Full-stack Developer | Freelance</h3>
-								<p class="period">jan 2021 - current</p>
-								<p class="info">Initiative with the engagement project on Instagram. I created the screens, as well as consuming the API.</p>
-							</li>
-							<li class="experience">
-								<h3>Full-stack Developer | PD Case Informática Ltda</h3>
-								<p class="period">oct 2020 - mar 2023</p>
-								<p class="info">I worked on developing the API for sending large amounts of data to the Santa Catarina Court of Auditors - TCE-SC conference. Start developing the communication project between the management units and the TCE.</p>
-							</li>
+						<ul id="experiences" class="experiences">
+							<!-- Append experiences template -->
 						</ul>
 					</div>
 				</button>
@@ -114,53 +62,14 @@
 						<div class="skills">
 							<div class="hard-skills-wrapper">
 								<h3>Hard Skills</h3>
-								<ul class="hard-skills">
-									<li class="hard-skill">
-										<img src="/assets/icons/java.svg" alt="Java">
-									</li>
-									<li class="hard-skill">
-										<img src="/assets/icons/spring.svg" alt="Spring Boot">
-	
-									</li>
-									<li class="hard-skill">
-										<img src="/assets/icons/postgresql.svg" alt="PostgreSQL">
-	
-									</li>
-									<li class="hard-skill">
-										<img src="/assets/icons/javascript.svg" alt="Java Script">
-	
-									</li>
-									<li class="hard-skill">
-										<img src="/assets/icons/html.svg" alt="HTML">
-	
-									</li>
-									<li class="hard-skill">
-										<img src="/assets/icons/css.svg" alt="CSS">
-	
-									</li>
-									<li class="hard-skill">
-										<img src="/assets/icons/angular.svg" alt="Angular">
-									</li>
+								<ul id="hard-skills" class="hard-skills">
+									<!-- Append hard skills template -->
 								</ul>
 							</div>
 							<div class="soft-skills-wrapper">
 								<h3>Soft Skills</h3>
-								<ul class="soft-skills">
-									<li class="soft-skill">
-										Lover of new challenges
-									</li>
-									<li class="soft-skill">
-										Self-taught
-									</li>
-									<li class="soft-skill">
-										Organized
-									</li>
-									<li class="soft-skill">
-										Methodical
-									</li>
-									<li class="soft-skill">
-										Like working in a team
-									</li>
+								<ul id="soft-skills" class="soft-skills">
+									<!-- Append soft skills template -->
 								</ul>
 							</div>
 						</div>
@@ -170,6 +79,7 @@
 		</section>
 	</main>
 	<script src="/assets/js/acordeon.js"></script>
+	<script src="/assets/js/api.js"></script>
 	<script src="/assets/js/main.js"></script>
 </body>
 
