Fix path source

--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 
 	<!-- CSS -->
-	<link rel="stylesheet" href="/assets/css/global.css">
-	<link rel="stylesheet" href="/assets/css/header.css">
-	<link rel="stylesheet" href="/assets/css/acordeon.css">
-	<link rel="stylesheet" href="/assets/css/language.css">
-	<link rel="stylesheet" href="/assets/css/repository.css">
-	<link rel="stylesheet" href="/assets/css/experience.css">
-	<link rel="stylesheet" href="/assets/css/skills.css">
+	<link rel="stylesheet" href="./assets/css/global.css">
+	<link rel="stylesheet" href="./assets/css/header.css">
+	<link rel="stylesheet" href="./assets/css/acordeon.css">
+	<link rel="stylesheet" href="./assets/css/language.css">
+	<link rel="stylesheet" href="./assets/css/repository.css">
+	<link rel="stylesheet" href="./assets/css/experience.css">
+	<link rel="stylesheet" href="./assets/css/skills.css">
 </head>
 
 <body>
@@ -78,9 +78,9 @@
 			</div>
 		</section>
 	</main>
-	<script src="/assets/js/acordeon.js"></script>
-	<script src="/assets/js/api.js"></script>
-	<script src="/assets/js/main.js"></script>
+	<script src="./assets/js/acordeon.js"></script>
+	<script src="./assets/js/api.js"></script>
+	<script src="./assets/js/main.js"></script>
 </body>
 
 </html>
