Add education information - remove iconn job to linkedin - order de categories

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<link rel="stylesheet" href="./assets/css/acordeon.css">
 	<link rel="stylesheet" href="./assets/css/language.css">
 	<link rel="stylesheet" href="./assets/css/repository.css">
-	<link rel="stylesheet" href="./assets/css/experience.css">
+	<link rel="stylesheet" href="./assets/css/experiencesEducations.css">
 	<link rel="stylesheet" href="./assets/css/skills.css">
 </head>
 
@@ -41,22 +41,6 @@
 					</div>
 				</button>
 				<button class="acordeon" type="button">
-					<h2 class="title">Repositories</h2>
-					<div class="content">
-						<ul id="repositories" class="repositories">
-							<!-- Append repositories template -->
-						</ul>
-					</div>
-				</button>
-				<button class="acordeon" type="button">
-					<h2 class="title">Experiences</h2>
-					<div class="content">
-						<ul id="experiences" class="experiences">
-							<!-- Append experiences template -->
-						</ul>
-					</div>
-				</button>
-				<button class="acordeon" type="button">
 					<h2 class="title">Skills</h2>
 					<div class="content">
 						<div class="skills">
@@ -73,6 +57,30 @@
 								</ul>
 							</div>
 						</div>
+					</div>
+				</button>
+				<button class="acordeon" type="button">
+					<h2 class="title">Repositories</h2>
+					<div class="content">
+						<ul id="repositories" class="repositories">
+							<!-- Append repositories template -->
+						</ul>
+					</div>
+				</button>
+				<button class="acordeon" type="button">
+					<h2 class="title">Experiences</h2>
+					<div class="content">
+						<ul id="experiences" class="experiences">
+							<!-- Append experiences template -->
+						</ul>
+					</div>
+				</button>
+				<button class="acordeon" type="button">
+					<h2 class="title">Education</h2>
+					<div class="content">
+						<ul id="educations" class="educations">
+							<!-- Append educations template -->
+						</ul>
 					</div>
 				</button>
 			</div>
