--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 					</div>
 				</button>
 				<button class="acordeon" type="button">
-					<h2 class="title">Education</h2>
+					<h2 class="title">Educations</h2>
 					<div class="content">
 						<ul id="educations" class="educations">
 							<!-- Append educations template -->
